<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact1">

    <TextView
        android:id="@+id/txtName1"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtContact1"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDetail1a"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDetail1a"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtAddress1a"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDetail1b"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDetail1b"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtAddress1b"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDetail1c"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDetail1c"
        android:layout_width="187dp"
        android:layout_height="39dp"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtPhone1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="299dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/man" />
</androidx.constraintlayout.widget.ConstraintLayout>